modified and standardized the headers css across pages for easier multi-page design

--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,31 @@
 }
 
 h1 {
-    font-size: 1.5rem;
-    font-weight: 300;
     color: #ECEFF1;
+    font-size: 2.5rem;
+    font-weight: 300;
 }
 
 h2 {
+    color: #ff479c;
+    font-size: 2rem;
+    font-weight: 200;
+}
+
+h3 {
     font-size: 1.75rem;
     font-weight: 200;
     color: #ECEFF1;
 }
 
-h3, h4, h5, h6 {
+h4 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: 2.5rem;
+    color: #80CBC4;
+}
+
+h5, h6 {
     font-size: 1.125rem;
     font-weight: 200;
     color: #ECEFF1;
@@ -208,9 +221,7 @@ header {
 }
 
 .greetings_text h2 {
-    font-size: 2rem;
     margin: 0.5rem 1.5rem;
-    color: #ff479c;
 }
 
 .greetings_text p {
@@ -285,7 +296,7 @@ img {
 .content {
     padding: 1.5rem;
     min-width: 20%;
-    max-width: 40%;
+    max-width: 90%;
 }
 
 .experience_title {
