missed one class in the last commit for hyphenation

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header {
 
 /* Hamburger Menu */
 
-.hamburger_line {
+.hamburger-line {
     background: #ECEFF1;
     height: 0.125rem;
     width: 1.5rem;
@@ -89,7 +89,7 @@ header {
     position: relative;
 }
 
-.hamburger_line::before, .hamburger_line::after {
+.hamburger-line::before, .hamburger-line::after {
     background: #ECEFF1;
     content: '';
     display: block;
@@ -99,11 +99,11 @@ header {
     position: absolute;
 }
 
-.hamburger_line::before {
+.hamburger-line::before {
     top: 0.3125rem;
 }
 
-.hamburger_line::after {
+.hamburger-line::after {
     top: -0.3125rem;
 }
 
@@ -164,16 +164,16 @@ header {
     max-height: 100%;
 }
 
-.menu-button:checked ~ .hamburger .hamburger_line {
+.menu-button:checked ~ .hamburger .hamburger-line {
     background: transparent;
 }
 
-.menu-button:checked ~ .hamburger .hamburger_line::before {
+.menu-button:checked ~ .hamburger .hamburger-line::before {
     transform: rotate(-45deg);
     top:0;
 }
 
-.menu-button:checked ~ .hamburger .hamburger_line::after {
+.menu-button:checked ~ .hamburger .hamburger-line::after {
     transform: rotate(45deg);
     top:0;
 }
