okay final one on hyphenation

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ header {
     margin: 0.5rem 1.5rem;
 }
 
-.greetings_emphasis {
+.greetings-emphasis {
     font-weight: 300;
     font-size: 120%;
     color:#80CBC4;
