--- a/css/style.css
+++ b/css/style.css
@@ -390,8 +390,11 @@ meter::-moz-meter-optimum::-moz-meter-bar {
 .photos {
   display: flex;
   flex-flow: row wrap;
-  align-items: center;
-  margin: 1em 0;
+}
+
+.photo {
+  display: flex;
+  object-fit: cover;
 }
 
 .footer {
