added a max-height to the headshot image to scale back the size to fit in a single page

--- a/css/style.css
+++ b/css/style.css
@@ -236,9 +236,9 @@ header {
 }
 
 #headshot-image {
-  height: auto;
   border: 0.125rem solid #80cbc4;
   border-radius: 5%;
+  max-height: 40em;
 }
 
 img {
