--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ p {
   font-size: 1.125rem;
   font-weight: 200;
   color: #eceff1;
-  margin-top: 0.25rem;
+  margin: 0.25rem 0;
 }
 
 /* Header Navbar */
