--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,13 @@ meter::-moz-meter-optimum::-moz-meter-bar {
   margin: 1rem 2rem;
 }
 
+.section-divider {
+  border: none;
+  border-top: 0.0625rem solid #80cbc4;
+  margin: 2.5rem 1rem;
+  opacity: 0.5;
+}
+
 .footer {
   align-items: center;
   background-color: #263238;
